--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -4,7 +4,7 @@
   <% if current_user.admin? %>
     <p>Access <%= link_to "Student Dashboard", students_path %></p>
   <% else %>
-    <p></p>
+    <p>Access <%= link_to "My Profile", student_path(current_user) %></p>
   <% end %>
 
   <%=link_to "Log Out", destroy_user_session_path, data: { turbo_method: :delete } %>
