--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -11,4 +11,5 @@
   <% end %>
 </div>
 
-<%= link_to "Dashboard", root_path %>
+<%= link_to "Dashboard", root_path %> |
+<%= link_to "Export Students", students_path(format: :csv) %>
