add import student functionality

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -11,5 +11,6 @@
   <% end %>
 </div>
 
+<%= render "import" %>
 <%= link_to "Dashboard", root_path %> |
 <%= link_to "Export Students", students_path(format: :csv) %>
